--- a/BackEnd/src/main/resources/application.yml
+++ b/BackEnd/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://sql12.freesqldatabase.com:3306/sql12707333
-    username: sql12707333
-    password: EJUfUAmgZE
+    url: "Enter the url"
+    username: "Enter database name here"
+    password: "Enter your password here"
   jpa:
     hibernate:
       ddl-auto: update
